Added tweet/retweet/favorite functionality for user

--- a/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Base.lproj/Main.storyboard
@@ -58,11 +58,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="121" id="Neg-I5-HBz" customClass="TweetcellTableViewCell" customModule="Twitter" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="121"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="150" id="Neg-I5-HBz" customClass="TweetcellTableViewCell" customModule="Twitter" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="150"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Neg-I5-HBz" id="VvI-sq-VLM">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="120.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="149.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="John Doe" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y3R-wv-KRe">
@@ -79,17 +79,43 @@
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tweet Content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bvR-SF-JEM">
-                                            <rect key="frame" x="73" y="33" width="286" height="77"/>
+                                            <rect key="frame" x="73" y="33" width="286" height="56"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qCt-h7-cq4" userLabel="favButton">
+                                            <rect key="frame" x="319" y="99" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="30" id="7Wx-sa-Mfv"/>
+                                                <constraint firstAttribute="height" constant="30" id="vLV-qI-akA"/>
+                                            </constraints>
+                                            <state key="normal" image="favor-icon"/>
+                                            <connections>
+                                                <action selector="favoriteTweet:" destination="Neg-I5-HBz" eventType="touchUpInside" id="7ZA-UE-Vpr"/>
+                                            </connections>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g3H-Xx-NYE" userLabel="retweetButton">
+                                            <rect key="frame" x="279" y="99" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="iMl-7o-1aU"/>
+                                                <constraint firstAttribute="width" constant="30" id="x8c-ds-lnM"/>
+                                            </constraints>
+                                            <state key="normal" image="retweet-icon"/>
+                                            <connections>
+                                                <action selector="retweet:" destination="Neg-I5-HBz" eventType="touchUpInside" id="gof-Hi-uvr"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="bvR-SF-JEM" firstAttribute="leading" secondItem="xgb-k7-uWQ" secondAttribute="trailing" constant="8" id="90A-gV-pQQ"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="qCt-h7-cq4" secondAttribute="bottom" constant="10" id="EPd-EN-EFE"/>
                                         <constraint firstItem="Y3R-wv-KRe" firstAttribute="top" secondItem="VvI-sq-VLM" secondAttribute="topMargin" id="Ent-oy-Jhl"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="bvR-SF-JEM" secondAttribute="bottom" id="Gcq-Pj-ZMx"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="qCt-h7-cq4" secondAttribute="trailing" constant="10" id="Ncx-sH-YU5"/>
+                                        <constraint firstItem="qCt-h7-cq4" firstAttribute="top" secondItem="bvR-SF-JEM" secondAttribute="bottom" constant="10" id="RLP-dE-k0n"/>
                                         <constraint firstItem="xgb-k7-uWQ" firstAttribute="leading" secondItem="VvI-sq-VLM" secondAttribute="leading" id="g3u-i7-aSo"/>
+                                        <constraint firstItem="qCt-h7-cq4" firstAttribute="leading" secondItem="g3H-Xx-NYE" secondAttribute="trailing" constant="10" id="jM6-l0-zt1"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="g3H-Xx-NYE" secondAttribute="bottom" constant="10" id="njM-FB-mZY"/>
                                         <constraint firstItem="Y3R-wv-KRe" firstAttribute="leading" secondItem="xgb-k7-uWQ" secondAttribute="trailing" constant="8" id="ppz-nb-ckP"/>
                                         <constraint firstItem="xgb-k7-uWQ" firstAttribute="top" secondItem="VvI-sq-VLM" secondAttribute="top" id="q0p-IH-oIw"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="bvR-SF-JEM" secondAttribute="trailing" id="s2I-uG-rqO"/>
@@ -97,7 +123,9 @@
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="favButton" destination="qCt-h7-cq4" id="TQJ-kS-dHy"/>
                                     <outlet property="profileImageView" destination="xgb-k7-uWQ" id="P4n-gV-LPi"/>
+                                    <outlet property="retweetButton" destination="g3H-Xx-NYE" id="rwA-WY-ALo"/>
                                     <outlet property="tweetContent" destination="bvR-SF-JEM" id="dnZ-fV-H9V"/>
                                     <outlet property="userNameLabel" destination="Y3R-wv-KRe" id="zTa-4s-iW9"/>
                                 </connections>
@@ -115,11 +143,64 @@
                                 <action selector="onLogout:" destination="T38-A2-b5A" id="nQX-Lr-WhQ"/>
                             </connections>
                         </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Tweet" id="WUW-hf-EhI">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <segue destination="XaR-6r-Xqc" kind="presentation" id="Dtr-qM-PiM"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NCY-Wj-dKV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2037.5999999999999" y="160.56971514242881"/>
+        </scene>
+        <!--Tweet View Controller-->
+        <scene sceneID="66M-Ok-gdm">
+            <objects>
+                <viewController id="y18-fB-Owd" customClass="TweetViewController" customModule="Twitter" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="NmN-gN-2Jp">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="z5a-kR-FiX">
+                                <rect key="frame" x="0.0" y="64" width="375" height="128"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="pkt-FM-grR"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="z5a-kR-FiX" firstAttribute="leading" secondItem="Udf-aE-4WL" secondAttribute="leading" id="SJi-VA-cqB"/>
+                            <constraint firstItem="Udf-aE-4WL" firstAttribute="trailing" secondItem="z5a-kR-FiX" secondAttribute="trailing" id="sx7-Vh-2AP"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Udf-aE-4WL"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="0cK-c7-cfi">
+                        <barButtonItem key="leftBarButtonItem" title="Cancel" style="plain" id="WJR-pf-YtC">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="cancel:" destination="y18-fB-Owd" id="2Od-q8-7YZ"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Tweet" style="plain" id="dUh-Qd-itS">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="tweet:" destination="y18-fB-Owd" id="NyO-jW-W1I"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tweetTextView" destination="z5a-kR-FiX" id="DN9-qC-dwZ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1AC-zd-Cyr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3980" y="165.96701649175412"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="oOE-Ng-Iuq">
@@ -141,5 +222,28 @@
             </objects>
             <point key="canvasLocation" x="1054" y="161"/>
         </scene>
+        <!--Tweet Navigation controller-->
+        <scene sceneID="pPL-UE-m4n">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="XaR-6r-Xqc" userLabel="Tweet Navigation controller" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="0Ie-9g-Jbk">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.1937673201" green="0.72186735440000005" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="y18-fB-Owd" kind="relationship" relationship="rootViewController" id="6L5-3h-enf"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="24K-tK-T95" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3040.8000000000002" y="165.96701649175412"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="favor-icon" width="30" height="30"/>
+        <image name="retweet-icon" width="30" height="30"/>
+    </resources>
 </document>
